<resources>
    <string name="app_name">DemoDialog</string>
    <string name="d1">Demo 1 - Simple Dialog</string>
    <string name="d2">Demo 2 Buttons Dialog</string>
    <string name="d3">Demo 3 Text Input Dialog</string>
    <string name="enter">Enter Some Text</string>
    <string name="exercise">Exercise 3</string>
    <string name="tv1">Enter Number 1</string>
    <string name="tv2">Enter Number 2</string>
    <string name="datepick">Demo 4 Datepicker Dialog</string>
    <string name="timepicker">Demo 5 Timepicker Dialog</string>
</resources>
